--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Mar 20 15:34:33 CDT 2023
-sdk.dir=C\:\\Users\\Alex Carlson\\AppData\\Local\\Android\\Sdk
+#Mon Mar 20 15:39:44 CDT 2023
+sdk.dir=C\:\\Users\\ejarm\\AppData\\Local\\Android\\Sdk
